# generative-ai-with-lang-chain-2ed

./: .gitignore  README.md  chapter03.ipynb  chapter05.ipynb  chapter06.ipynb  chapter07.ipynb  chapter08.ipynb  pyproject.toml
chapter02/: .gitignore  README.md  chapter02.ipynb  ollama.sh  pyproject.toml
chapter02/src/chapter02/lang-chain-expression-language/: 01_simple_workflows_with_lcel.py  0201_complex_chain_example.py  0202_complex_chain_example.py  0203_complex_chain_example.py
chapter02/src/chapter02/model-interfaces/: 01_llm_interaction_patterns.py  02_development_testing.py  03_working_with_chat_models.py  04_reasoning_models.py
chapter02/src/chapter02/prompts-and-template/: 01_chat_promt_templates.py
chapter03/: README.md  chapter03.ipynb  main.py  pyproject.toml
chapter04/: README.md  chapter04.ipynb  main.py  pyproject.toml
chapter04/src/chapter04/developing-a-corporate-documentation-chatbot/: config.py  document_loader.py  llms.py  rag.py  retriever.py  streamlit_app.py
chapter05/: README.md  chapter05.ipynb  main.py  pyproject.toml
chapter06/: README.md  chapter06.ipynb  main.py  pyproject.toml
chapter07/: README.md  chapter07.ipynb  pyproject.toml
chapter08/: README.md  chapter08.ipynb  main.py  pyproject.toml
chapter09/: README.md  chapter09.ipynb  main.py  pyproject.toml
chapter09/model-context-protocol/: pyproject.toml
chapter09/model-context-protocol/src/: main.py
chapter09/model-serving-infrastructure/: main.py  pyproject.toml
chapter09/monitoring-and-cost-analysis/: main.py  pyproject.toml
chapter09/output-token-optimization/: main.py  pyproject.toml
chapter09/scalable-deployment-with-ray-serve/: .gitignore  README.md  main.py  pyproject.toml
chapter09/scalable-deployment-with-ray-serve/src/: build_index.py  serve_index.py  testbot.py  tools.py
chapter09/tiered-model-selection/: main.py  pyproject.toml
chapter09/tracking-responses/: README.md  main.py  pyproject.toml
chapter09/web-framework-deployment-with-fast-api/: .swp  README.md  main.py  pyproject.toml
utils/: pyproject.toml
utils/src/utils/: config.py
