[project]
name = "chapter02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "python-dotenv[cli]>=1.1.1",
    "utils",
]

[tool.uv.sources]
utils = { path = "../utils", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.22",
]
