[project]
name = "model-serving-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3",
    "langchain-core~=0.3",
    "langchain-litellm~=0.3",
    "litellm>=1.78.6",
    "python-dotenv>=1.1.1",
]
