[project]
name = "output-token-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3",
    "langchain-core~=0.3",
    "langchain-openai~=0.3",
    "python-dotenv>=1.1.1",
    "utils",
]

[tool.uv.sources]
utils = { path = "../../utils", editable = true }
