[project]
name = "scalable-deployment-with-ray-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-cors>=0.8.1",
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.13.0",
    "langchain-community~=0.4",
    "langchain-core~=1.0",
    "langchain-huggingface~=1.0",
    "langchain-text-splitters~=1.0",
    "numpy>=2.3.4",
    "ray[default,serve]>=2.50.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
]
