[project]
name = "tracking-responses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3",
    "langchain-core~=0.3",
    "langgraph~=0.6",
    "pydantic>=2.12.3",
    "utils",
]

[tool.uv.sources]
utils = { path = "../../utils", editable = true }
