[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "jinja2>=3.1.6",
    "langchain~=0.3",
    "langchain-core~=0.3",
    "utils",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.sources]
utils = { path = "../../utils", editable = true }
